# sidebar_hider

./: MANIFEST.in  README.md  pyproject.toml  setup.py
sidebar_hider/: __init__.py  hooks.py  modules.txt
sidebar_hider/config/: desktop.py
sidebar_hider/public/css/: sidebar_hide.css
sidebar_hider/public/js/: sidebar_hide.js
